<resources>
    <string name="app_name">GasTest</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_myLocations">My Locations</string>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="preference_file_key">user info</string>
    <string name="saved_user_data">user data</string>
    <string name="saved_user_username">saved username</string>
    <string name="saved_user_password">saved password</string>
    <string name="get_location">Get My Locations</string>
    <string name="save">Save</string>
    <string name="zoom">Zoom</string>
    <string name="saved_user_location_id">id</string>
    <string name="preference_file_key_id">key_id</string>

</resources>
