<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment

        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:context="com.linagas.android.gastest.MapsActivity"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        map:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        map:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        map:layout_constraintVertical_bias="1.0"
        map:layout_constraintHorizontal_bias="0.56" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:layout_marginStart="16dp"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        map:layout_constraintTop_toTopOf="@+id/map"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintVertical_bias="1.0"
        android:layout_marginEnd="16dp"
        map:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        map:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:text="@string/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnZoom"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintTop_toTopOf="@+id/map"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintVertical_bias="1.0"

        map:layout_constraintLeft_toRightOf="@+id/btnSave"
        map:layout_constraintHorizontal_bias="0.16" />

    <Button
        android:text="@string/get_location"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:id="@+id/btnGetLoc"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintTop_toTopOf="@+id/map"
        android:layout_marginEnd="240dp"
        map:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="240dp"
        map:layout_constraintVertical_bias="0.84000003"
        android:layout_marginStart="16dp"
        map:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        map:layout_constraintHorizontal_bias="0.0" />



</android.support.constraint.ConstraintLayout>